Task6Exam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: examtask6
spec:
 replicas: 3
 selector:
   matchLabels:
     app: examtask6
 template:
   metadata:
     labels:
       app: examtask6
   spec:
     containers:
     - name: examtask6
       image: gcr.io/google-samples/hello-app:1.0
---
apiVersion: v1
kind: Service
metadata:
 name: examtask6
 annotations:
   konghq.com/plugins: CorrelationId,five-per-min
spec:
 selector:
   app: hellomy1
 ports:
 - port: 80
   targetPort: 8080
